# FloatX

./: AUTHORS.md  CMakeLists.txt  LICENSE  README.md
cuda_test/: CMakeLists.txt  add_000.cu  cuda_assert_op.cuh  cuda_test.cuh  div_000.cu  mix_000.cu  mul_000.cu  sub_000.cu
examples/: CMakeLists.txt  DemoNewton.cpp  common_type.cpp  demo_newton.cpp  example.cpp  example2.cpp
src/: floatx.hpp
test/: CMakeLists.txt  IEEEHelper.cpp  IEEEHelper.h  NanInf.cpp  arithmetic.cpp  assignment.cpp  conversion.cpp  rel_ops.cpp  round_nearest.cpp  std_integration.cpp  stream.cpp  value_representation.cpp  value_representation_bits.cpp  value_representation_half.cpp
testx/: CMakeLists.txt  add_000.cpp  div_000.cpp  mul_000.cpp  sub_000.cpp
